--- a/lourde.co/index.html
+++ b/lourde.co/index.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-	<link rel="canonical" href="https://lourde.co/index.html" />
+	<link rel="canonical" href="https://raw.githubusercontent.com/emlourde/lourde.co/main/lourde.co/index.html" />
 	<meta name="robots" content="index, follow" />
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
